# krakenapi

./: .gitignore  krakenapi.py  pyproject.toml  setup.cfg
src/: krakenapi.py
src/krakenapi/: krakenapi.py
src/tsuki_kraken_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
