[project]
name = "tsuki-kraken-api"
description = "Tsuki Kraken API"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests"
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/tsukistaking/krakenapi"
"Bug Tracker" = "https://github.com/tsukistaking/krakenapi/issues"

[tool.setuptools-git-versioning]
enabled = true

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"