[project]
name = "tsuki-kraken-api"
description = "Tsuki Kraken API"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "requests"
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.urls]
repository = "https://github.com/tsukistaking/krakenapi"
"Bug Tracker" = "https://github.com/tsukistaking/krakenapi/issues"

[tool.setuptools_scm]

[build-system]
requires = [
    "setuptools>=45", 
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"