[project]
name = "tsuki-kraken-api"
version = "0.3.0"
description = "Tsuki Kraken API"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "niquests"
]
requires-python = ">=3.14"

[project.urls]
repository = "https://github.com/tsukistaking/krakenapi"
"Bug Tracker" = "https://github.com/tsukistaking/krakenapi/issues"

[build-system]
requires = [
    "setuptools>=45"
]
build-backend = "setuptools.build_meta"
