[metadata]
# replace with your username:
name = tsuki-kraken-api
version = 0.0.2
description = Tsuki Kraken API
url = https://github.com/tsukistaking/krakenapi
project_urls =
    Bug Tracker = https://github.com/tsukistaking/krakenapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
